--- a/Danger/Base.lproj/LaunchScreen.storyboard
+++ b/Danger/Base.lproj/LaunchScreen.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,16 +21,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Artboard 1" translatesAutoresizingMaskIntoConstraints="NO" id="gJf-iC-vA0">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pocket-Traveler" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cud-se-HhC">
+                                <rect key="frame" x="104" y="317" width="167" height="32"/>
+                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Thin" family="Apple SD Gothic Neo" pointSize="26"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="gJf-iC-vA0" secondAttribute="bottom" id="LbH-RB-Mt0"/>
-                            <constraint firstItem="gJf-iC-vA0" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="aSp-4E-kD7"/>
-                            <constraint firstItem="gJf-iC-vA0" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="q03-3w-aXm"/>
-                            <constraint firstAttribute="trailing" secondItem="gJf-iC-vA0" secondAttribute="trailing" id="yaM-I6-y5B"/>
+                            <constraint firstItem="cud-se-HhC" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="fNO-Q0-wEj"/>
+                            <constraint firstItem="cud-se-HhC" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="hrN-sb-s4d"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -39,7 +40,4 @@
             <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="Artboard 1" width="750" height="1334"/>
-    </resources>
 </document>
